--- a/eureka-server.yml
+++ b/eureka-server.yml
@@ -1,4 +1,8 @@
-server.port=8090
-eureka.client.register-with-eureka=false
-eureka.client.fetch-registry=false
-eureka.instance.hostname=localhost
+server:
+    port: 8090
+eureka:
+    client: 
+        register-with-eureka: false
+        fetch-registry: false
+    instance: 
+        hostname: localhost
