--- a/eureka-server.yml
+++ b/eureka-server.yml
@@ -1,6 +1,8 @@
 server:
     port: 8090
 eureka:
+    server:
+        enable-self-preservation: false
     client: 
         register-with-eureka: false
         fetch-registry: false
