--- a/eureka-server.yml
+++ b/eureka-server.yml
@@ -3,6 +3,7 @@ server:
 eureka:
     server:
         enable-self-preservation: false
+        eviction-interval-timer-in-ms: 5000
     client: 
         register-with-eureka: false
         fetch-registry: false
